# lingua_learn

./: .gitignore  README.md  pyproject.toml
api/: README.md  __init__.py  main.py  pyproject.toml
api/utils/: __init__.py  hand_detection.py  inference.py
frontend/: README.md  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: ArrowButton.jsx  Footer.jsx  Header.jsx  ImageCard.jsx  LanguageCard.jsx  LetterDisplay.jsx  ModeSwitcher.jsx  VideoFeed.jsx
frontend/src/pages/: PracticePage.jsx  QuizPage.jsx
