[project]
name = "lingua-learn-api"
version = "0.1.0"
description = "Basic FastAPI setup for Lingua Learn"
authors = [{ name = "Lingua Learn" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "transformers>=4.43.0",
  "torch>=2.2.0",
  "pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
default-groups = ["dev"]


[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]
